[package]
name = "streamx"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.10"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
bytes = "1.0"
hmac = "0.12"
md5 = "0.7"
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4" 